created navbar and dombuilder

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
   <title>vocab-YOU-lary</title>
 </head>
 <body>
-  <div id="login-form-container"></div>
+  <button>All Vocab</button>
+  <button>Javascript</button>
+  <button>HTML</button>
+  <button>CSS</button>
   <div id="app"></div>
+  <div id="login-form-container"></div>
 </body>
 </html>
